--- a/api/app/src/task-manager/package.json
+++ b/api/app/src/task-manager/package.json
@@ -20,6 +20,7 @@
     "sweetalert2": "^11.21.2",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
+    "vue-cal": "^4.10.2",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.8.3"
