--- a/api/app/src/task-manager/package.json
+++ b/api/app/src/task-manager/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
+    "chart.js": "^3.9.1",
     "pinia": "^3.0.2",
     "sweetalert2": "^11.21.2",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
     "vue-cal": "^4.10.2",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.8.3"
