--- a/api/app/src/task-manager/package.json
+++ b/api/app/src/task-manager/package.json
@@ -23,8 +23,10 @@
     "vue": "^3.5.13",
     "vue-cal": "^4.10.2",
     "vue-chart-3": "^3.1.8",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.8.3"
   },
   "devDependencies": {
